docs: remove superseded GSD planning tree
Drop pre-V2.7 .planning artifacts and rewrite CLAUDE.md for OpenSpec.

Co-authored-by: Cursor <cursoragent@cursor.com>